<resources>
    <string name="app_name">PWMS</string>
    <string name="colon">:</string>
    <string name="login_account">请输入您的账号</string>
    <string name="login_password">请输入您的密码</string>
    <string name="login_button">登录</string>
    <string name="copyRight">\@MBP Group.All Rights Reserved.</string>
    <string name="user_login">用户登录</string>
    <string name="warehouse_select">仓库选择</string>
    <string name="confirm_button">确认</string>
    <string name="function_menu">功能菜单</string>
    <string name="receipt_select">单据选择</string>
    <string name="start_receive">开始收货</string>
    <string name="sku_code">物料编码</string>
    <string name="sku_name">物料名称</string>
    <string name="sku_spec">物料规格</string>
    <string name="plan_qty">计划数量（EA）</string>
    <string name="set_plan_package">计划包装</string>
    <string name="unreceive_qty">待收数量（EA）</string>
    <string name="receive_confirm">收货确认</string>
    <string name="clear">清除</string>
    <string name="get_palletSeq">获取托盘号</string>
    <string name="next_sku">下一物料</string>
    <string name="dock">收货暂存</string>
    <string name="packageList">包装列表</string>
    <string name="coefficient">包装折算</string>
    <string name="unRecievePackQty">待收包装数量</string>
    <string name="EANum">EA数量</string>
    <string name="inboundTrackSeq">收货追踪号</string>
    <string name="startUpperShelf">开始上架</string>
    <string name="upper_shelf_confirm">上架确认</string>
    <string name="unUpper">待上架</string>
    <string name="lotSequence">批次号</string>
    <string name="dispLot">批次信息</string>
    <string name="srcBin">原始库位</string>
    <string name="destBin">目标库位</string>
    <string name="palletSeq">托盘号</string>
    <string name="unExecutePackQty">将执行包装数量</string>
    <string name="newBin">新库位</string>
    <string name="next">下一条</string>
    <string name="bin_select">库位选择</string>
    <string name="biztype">biztype</string>
    <string name="stockDate">备货日期</string>
    <string name="planQty">计划数量</string>
    <string name="executedQty">已拣选数量</string>
    <string name="binCode">集货库位</string>
    <string name="pick_confirm">拣货确认</string>
    <string name="task_id">作业单号</string>
    <string name="set_plan_package_and_coefficient">计划包装/折算</string>
    <string name="unExecutePackQtyAndEA">计划包装数量/EA数</string>
    <string name="bin_scan_confirm">库位扫描确认</string>
    <string name="current_location">当前位置</string>
    <string name="scanning_bin_code">扫描库位编码</string>
    <string name="countDate">计划日期</string>
    <string name="skuCount">品项数</string>
    <string name="quantCount">批次数</string>
    <string name="blindCount">盲盘/明盘</string>
    <string name="countMethod">盘点方式</string>
    <string name="inventory_entry">盘点录入</string>
    <string name="cancel">取消</string>
    <string name="search">查询</string>

</resources>
