<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.plusone.pwms.activity.InventorySearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/toolbar_theme">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:text="库存查询"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/home_icon"
            android:src="@drawable/home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@color/transparent"
            />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/lotSequence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_round_border"
                    android:inputType="none"
                    android:layout_marginRight="5dp"
                    android:hint="@string/lotSequence"
                    android:layout_weight=".5"/>

                <EditText
                    android:id="@+id/binCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_round_border"
                    android:inputType="none"
                    android:layout_marginRight="5dp"
                    android:hint="库位号"
                    android:layout_weight=".5"/>

                <EditText
                    android:id="@+id/skuCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textview_round_border"
                    android:inputType="none"
                    android:hint="@string/sku_code"
                    android:layout_weight=".5"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/system_setup_button"
                    android:text="@string/clear"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    android:layout_weight="0.7"/>

                <Button
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/system_setup_button"
                    android:layout_marginLeft="30dp"
                    android:text="@string/search"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp"
                    android:layout_weight="0.3"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


                <com.yanzhenjie.recyclerview.SwipeRecyclerView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@null" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>