<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.plusone.pwms.activity.MoveTaskDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/toolbar_theme">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite"
            android:text="移位确认"
            android:textSize="20sp"
            android:textStyle="bold" />
        <ImageButton
            android:id="@+id/home_icon"
            android:src="@drawable/home_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@color/transparent"
            />
    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/srcBin"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/srcBin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:inputType="none"
                        android:layout_weight=".3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/destBin"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/destBin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:inputType="none"
                        android:layout_weight=".3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sku_code"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/sku_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:inputType="none"
                        android:layout_weight=".3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/sku_name"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/sku_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:inputType="none"
                        android:layout_weight=".3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/lotSequence"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/lotSequence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:inputType="none"
                        android:layout_weight=".3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/dispLot"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/dispLot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:inputType="none"
                        android:layout_weight=".3"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/palletSeq"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/palletSeq"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:inputType="none"
                        android:layout_weight=".3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="@string/set_plan_package_and_coefficient"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/set_plan_package_and_coefficient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:inputType="none"
                        android:layout_weight=".3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:text="包装数量"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/unExecutePackQty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:layout_weight=".3"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Spinner
                        android:id="@+id/packageSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:paddingVertical="10dp"
                        android:background="@drawable/spinner"
                        android:layout_weight=".5">
                    </Spinner>

                    <EditText
                        android:id="@+id/executePackQty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/textview_round_border"
                        android:layout_weight=".5"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/bin_scan_confirm"
                        android:layout_weight=".7"/>
                    <EditText
                        android:id="@+id/bin_scan_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/textview_round_border"
                        android:inputType="none"
                        android:layout_weight=".3"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:orientation="vertical">

                <com.yanzhenjie.recyclerview.SwipeRecyclerView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:divider="@null" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:mrl_rippleColor="@color/colorWhite"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleDimension="200dp">

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/system_setup_button"
                android:text="@string/confirm_button"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />
        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>
</LinearLayout>